fixed about me section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="content">
                     <h1 class="spacing-below">Kimberly Flores</h1>
                     <h3 class="spacing-below">Web Developer and Designer</h3>
-                    <button class="section-btn">Discover my Work</button>
+                    <a class="section-btn"  href="#project-section">Discover my Work</a>
                 </div>
         </section>
 
@@ -184,6 +184,9 @@
 
 
        <!--Tweet Page-->
+       <div class="code-project filterProject class" id="disclaimer">
+           <h4>Because the projects came from class, I cannot release any code.</h4>
+       </div>
        <div class="code-project filterProject class">
         <h4 class="sm-project-title">Tweet Analyzer</h4>
         <div class="greenline"><div class="sm-project-line"></div></div>
@@ -202,13 +205,9 @@
                     tweets and then displayed it on multiple graphs using vega-lite.
                 </p>
                 <p><span class="bold">
-                    Tools:</span> JavaScript, TypeScript, Twitter api
+                    Tools:</span> JavaScript, TypeScript, Twitter API
                     
                 </p>
-                <div class="link-div">
-                    <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
-                    <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
-                </div>
             </div>
         </div>
     </div>        
@@ -226,12 +225,12 @@
             <div class="column right-side">
                 <h4 class="project-title">Spotify Page</h4>
                 <div class="project-line"></div>
-                <p>Using the spotify api, users can view information about a song, artist, or album.
+                <p>My partner and I worked together to create a single page app using the Spotify API.
+                   Users can search for an artist, album, or track and get back an audio analysis.
+                    We used Oauth for authentication and learned how to handle access and refresh tokens
+                   for each user session. 
                 </p>
-                <div class="link-div">
-                    <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
-                    <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
-                </div>
+                <p><span class="bold">Tools:</span> Angular, Express, Nodejs, Spotify API</p>
             </div>
         </div>
     </div> 
@@ -255,10 +254,6 @@
                     Information is saved through Firebase and previous entries can be viewed.
                 </p>
                 <p><span class="bold">Tools:</span> Ionic framework, Firebase</p>
-                <div class="link-div">
-                    <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
-                    <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
-                </div>
             </div>
         </div>
     </div> 
@@ -281,10 +276,6 @@
                     and rank each item in terms of relevancy.
                 </p>
                 <p><span class="bold">Tools:</span> Python, MongoDB</p>
-                <div class="link-div">
-                    <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW">CodePen link</a> 
-                    <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW">Demo</a>
-                </div>
             </div>
         </div>
     </div> 
@@ -412,7 +403,7 @@
         <!--About Section-->
         <section id="about-section">
             <div class="row heading">
-                <h2>Meet Kimberly Flores</h2>
+                <h2>About Me</h2>
                 <div class="line"></div>
             </div>
             <div class="row2">
@@ -422,17 +413,25 @@
                 <div class="column" >
                     <div id="about">
                     <p class="spacing-below">
-                        Hello! I recently graduated from the 
+                        Hello! My name is Kimberly Flores I recently graduated from the 
                         University of California, Irvine with a B.S. in Informatics and 
-                        specialization in Human-Computer Interaction (HCI). What's Informatics 
-                        you ask? It's designing software based on how people interact with 
-                        technologies. During my time, my passion for creating user-centric designs 
-                        started and I dove into the world of User Experience Design and Research. I 
-                        gained techniques on how to create such designs by getting to know my users 
-                        first and getting them involved in the process. I then honed my skills in web 
-                        development. I've built out apps with a team and on my own. With both design and 
-                        code, I am able to create a product that my users like. I am currently looking 
-                        for a career in front-end development or UX/UI design.</p>
+                        specialization in Human-Computer Interaction (HCI).
+                    </p>
+                    <p class="spacing-below">
+                        Creating user-centric interfaces became one of my favorite things to create 
+                        during my time in school. I learned about user experience design,  
+                        research techniques, and how these interfaces are created 
+                        through code. With both design and code, I am able to create an inclusive 
+                        product that my users and clients will enjoy. 
+                    </p>
+                    <p class="spacing-below">
+                        I am a determined person who is eager to learn new skills and help out others. 
+                        In my free time, I enjoy taking a walk, exploring hiking trails, trying to cook 
+                        new things, and painting new things.
+                    </p>
+                    <p class="spacing-below">
+                        I am currently looking for a career in web development or UX/UI design.
+                    </p>
                     <a href="" class="btn2">Resume</a>
                     </div>
                 </div>
@@ -453,7 +452,7 @@
                 <img src="images/single-palm-tree.jpg" id="palm"/>
             </div>
             <div class="column" id="contact">
-                <p>Hello! Thank you for expressing interest in my work. If you have a project 
+                <p>Thank you for expressing interest in my work! If you have a project 
                     in mind or would like to chat, contact me using my email.
                 </p>
                 <div class="row spacing-top">
