--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 
     <div class="container-fluid">
-        <!--Nav-->
+<!--Nav-->
         <nav class="sticky">
             <div class="logo">
-                <h4>KF</h4>
+                <h4 class="logo">KF</h4>
             </div>
             <ul class="nav-links">
                 <li class="nav-item"><a href="#home-section">Home</a></li>
@@ -43,7 +43,8 @@
     
             </div>
         </nav>
-        <!--Home section-->
+
+<!--Home section-->
         <section class="row palmtree-bg" id="home-section">
                 <div class="content">
                     <h1 class="spacing-below">Kimberly Flores</h1>
@@ -54,11 +55,11 @@
 
 <!--Projects-->
     <section id="project-section">
-        <div class="row heading">
+        <div class="row heading center">
             <h2>Projects</h2>
             <div class="line"></div>
         </div>
-        <div class="row heading">
+        <div class="row heading center">
             <span>
                 <button class="active-btn filter-btn personal" onclick= "filterProjects('personal')">Personal</button>
                 <button class="filter-btn class" onclick="filterProjects('class')">Class</button>
@@ -68,7 +69,7 @@
 
         <div class="code-project filterProject personal show">
             <h4 class="sm-project-title">Recipe Keeps</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="center"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="images/recipekeeps.png">
@@ -82,8 +83,8 @@
                     <p><span class="bold">Tools/Frameworks:</span> React, Redux, Express, Nodejs, MongoDB, AWS-S3, Bootstrap, React router 
                     </p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/recipe-keeps" target="_blank">Github link</a> 
-                        <a class="links" href="https://obscure-taiga-26298.herokuapp.com/" target="_blank">Demo</a>
+                        <a class="links-btn" href="https://github.com/kimberlyflrs/recipe-keeps" target="_blank">Github link</a> 
+                        <a class="links-btn" href="https://obscure-taiga-26298.herokuapp.com/" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -93,7 +94,7 @@
         <!--Pomodoro Clock-->
         <div class="code-project filterProject personal show">
             <h4 class="sm-project-title">Pomodoro Clock</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="greenline center"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="images/pomodoro.png">
@@ -106,8 +107,8 @@
                     </p>
                     <p><span class="bold">Tools/Frameworks:</span> React, Redux, Bootstrap</p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/pomodoro-clock" target="_blank">Github link</a> 
-                        <a class="links" href="https://pomodoro-clock-kf.herokuapp.com/" target="_blank">Demo</a></span>
+                        <a class="links-btn" href="https://github.com/kimberlyflrs/pomodoro-clock" target="_blank">Github link</a> 
+                        <a class="links-btn" href="https://pomodoro-clock-kf.herokuapp.com/" target="_blank">Demo</a></span>
                     </div>
                 </div>
             </div>
@@ -116,7 +117,7 @@
         <!--Multiplication Quiz-->
         <div class="code-project filterProject personal show">
             <h4 class="sm-project-title">Multiplication Quiz</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="greenline center"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="images/multiplication.png">
@@ -130,8 +131,8 @@
                     </p>
                     <p><span class="bold">Tools/Frameworks:</span> HTML5, CSS3, JavaScript, Bootstrap</p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/Multiplication-Quiz" target="_blank">Github link</a> 
-                        <a class="links" href="https://multiplication-pracctice-quiz.herokuapp.com/" target="_blank">Demo</a>
+                        <a class="links-btn" href="https://github.com/kimberlyflrs/Multiplication-Quiz" target="_blank">Github link</a> 
+                        <a class="links-btn" href="https://multiplication-pracctice-quiz.herokuapp.com/" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -141,7 +142,7 @@
         <!--Portfolio Site-->
         <div class="code-project filterProject personal show">
             <h4 class="sm-project-title">Portfolio Website</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="greenline center"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="portfolio.png">
@@ -153,8 +154,8 @@
                     </p>
                     <p><span class="bold">Tools/Frameworks:</span> HTML5, CSS3, JavaScript</p>
                     <div class="link-div">
-                        <a class="links" href="https://github.com/kimberlyflrs/code-portfolio" target="_blank">Github link</a> 
-                        <a class="links" href="https://kimberly-flores.com" target="_blank">Demo</a>
+                        <a class="links-btn" href="https://github.com/kimberlyflrs/code-portfolio" target="_blank">Github link</a> 
+                        <a class="links-btn" href="https://kimberly-flores.com" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -164,7 +165,7 @@
         <!--Jewelry Page-->
         <div class="code-project filterProject personal show">
             <h4 class="sm-project-title">Jewlery Shop Page</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="greenline center"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="images/jewleryshop.png">
@@ -175,8 +176,8 @@
                     <p>A home page for a jewlery shop. This is a single coded home page. All other pages do not link anywhere.
                     </p>
                     <div class="link-div">
-                        <a class="links" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW" target="_blank">CodePen link</a> 
-                        <a class="links" href="https://codepen.io/kimberlyflrs/full/xxGwBaW" target="_blank">Demo</a>
+                        <a class="links-btn" href="https://codepen.io/kimberlyflrs/pen/xxGwBaW" target="_blank">CodePen link</a> 
+                        <a class="links-btn" href="https://codepen.io/kimberlyflrs/full/xxGwBaW" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
@@ -184,12 +185,12 @@
 
 
        <!--Tweet Page-->
-       <div class="code-project filterProject class" id="disclaimer">
+       <div class="code-project filterProject class center">
            <h4>Because the projects came from class, I cannot release any code.</h4>
        </div>
        <div class="code-project filterProject class">
         <h4 class="sm-project-title">Tweet Analyzer</h4>
-        <div class="greenline"><div class="sm-project-line"></div></div>
+        <div class="greenlinecenter"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
                 <video width="320" height="240" controls class="left-side">
@@ -215,7 +216,7 @@
        <!--Spotify Page-->
        <div class="code-project filterProject class">
         <h4 class="sm-project-title">Spotify Page</h4>
-        <div class="greenline"><div class="sm-project-line"></div></div>
+        <div class="greenline center"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
                 <video width="320" height="240" controls class="left-side">
@@ -239,7 +240,7 @@
        <!--Sleep Logger-->
        <div class="code-project filterProject class">
         <h4 class="sm-project-title">Sleep Logger App</h4>
-        <div class="greenline"><div class="sm-project-line"></div></div>
+        <div class="greenline center"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
                 <video width="320" height="240" controls class="left-side">
@@ -262,7 +263,7 @@
        <!--Information Retrieval-->
        <div class="code-project filterProject class">
         <h4 class="sm-project-title">ICS Search Engine</h4>
-        <div class="greenline"><div class="sm-project-line"></div></div>
+        <div class="greenline center"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
                 <video width="320" height="240" controls class="left-side">
@@ -284,7 +285,7 @@
            <!--VidPT-->
            <div class="code-project filterProject ux">
             <h4 class="sm-project-title">VidPT Mobile App</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="greenline center"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="images/vidpt-case-photo.png">
@@ -297,7 +298,7 @@
                     </p>
                     <p><span class="bold">Role:</span> User Experience Design, User Interface Design, User Research</p>
                     <div class="link-div">
-                        <a class="links" href="https://kimberlyflrs.github.io/vidpt.html" target="_blank">Case Study</a> 
+                        <a class="links-btn" href="https://kimberlyflrs.github.io/vidpt.html" target="_blank">Case Study</a> 
                     </div>
                 </div>
             </div>
@@ -308,7 +309,7 @@
                <!--EcoStat-->
        <div class="code-project filterProject ux">
         <h4 class="sm-project-title">EcoStat</h4>
-        <div class="greenline"><div class="sm-project-line"></div></div>
+        <div class="greenline center"><div class="sm-project-line"></div></div>
         <div class="row2">
             <div class="column">
                 <img class="left-side"src="images/ecostat-case-photo.png">
@@ -323,7 +324,7 @@
                 </p>
                 <p><span class="bold">Role:</span> User Experience Researcher</p>
                 <div class="link-div">
-                    <a class="links" href="https://kimberlyflrs.github.io/ecostat.html" target="_blank">Case Study</a> 
+                    <a class="links-btn" href="https://kimberlyflrs.github.io/ecostat.html" target="_blank">Case Study</a> 
                 </div>
             </div>
         </div>
@@ -333,7 +334,7 @@
            <!--Food Journal-->
            <div class="code-project filterProject ux">
             <h4 class="sm-project-title">Food Journal</h4>
-            <div class="greenline"><div class="sm-project-line"></div></div>
+            <div class="greenline center"><div class="sm-project-line"></div></div>
             <div class="row2">
                 <div class="column">
                     <img class="left-side"src="images/foodjournal-case-photo.png">
@@ -347,7 +348,7 @@
                     </p>
                     <p><span class="bold">Role:</span> User Experience Designer, Front-End Developer</p>
                     <div class="link-div">
-                        <a class="links" href="https://kimberlyflrs.github.io/foodjournal.html" target="_blank">Case Study</a> 
+                        <a class="links-btn" href="https://kimberlyflrs.github.io/foodjournal.html" target="_blank">Case Study</a> 
                     </div>
                 </div>
             </div>
@@ -359,7 +360,7 @@
 
     <!--Services-->
     <section id="service-section">
-        <div class="row heading">
+        <div class="row heading center">
             <h2>Services</h2>
             <div class="line"></div>
         </div>
@@ -402,12 +403,12 @@
 
         <!--About Section-->
         <section id="about-section">
-            <div class="row heading">
+            <div class="row heading center">
                 <h2>About Me</h2>
                 <div class="line"></div>
             </div>
             <div class="row2">
-                <div class="column" id="image">
+                <div class="column center">
                     <img src="about.jpg" id="img"/>
                 </div>
                 <div class="column" >
@@ -432,7 +433,7 @@
                     <p class="spacing-below">
                         I am currently looking for a career in web development or UX/UI design.
                     </p>
-                    <a href="" class="btn2">Resume</a>
+                    <a href="" class="links-btn" target="_blank">Resume</a>
                     </div>
                 </div>
             </div>
@@ -442,13 +443,13 @@
 <!--Contact-->
 
     <section id="contact-section">
-        <div class="row heading">
+        <div class="row heading center">
             <h2>Let's Connect</h2>
             <div class="line"></div>
         </div>
 
         <div class="row2">
-            <div class="column" id="palmimage"> 
+            <div class="column center"> 
                 <img src="images/single-palm-tree.jpg" id="palm"/>
             </div>
             <div class="column" id="contact">
