added resume link

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                         and Apple watch. I was in charge of designing and programming the mobile app and 
                         personal assistant devices.
                     </p>
-                    <p><span class="bold">Role:</span> User Experience Designer, Front-End Developer</p>
+                    <p><span class="bold">Role:</span> User Experience Designer, User Interface Designer, Front-End Developer</p>
                     <div class="link-div">
                         <a class="links-btn" href="https://kimberlyflrs.github.io/foodjournal.html" target="_blank">Case Study</a> 
                     </div>
@@ -433,7 +433,7 @@
                     <p class="spacing-below">
                         I am currently looking for a career in web development or UX/UI design.
                     </p>
-                    <a href="" class="links-btn" target="_blank">Resume</a>
+                    <a href="https://drive.google.com/file/d/15CTbCfDRx5G9leUUpDqYKUW13fKjyrQj/view?usp=sharing" class="links-btn" target="_blank">Resume</a>
                     </div>
                 </div>
             </div>
