--- a/index.html
+++ b/index.html
@@ -433,8 +433,10 @@
                     <p class="spacing-below">
                         I am currently looking for a career in web development or UX/UI design.
                     </p>
+                    <div class="center">
                     <a href="https://drive.google.com/file/d/1V8CG2ZMck-Qy1aSg_cG4fFaSAawnW50j/view?usp=sharing" class="links-btn" target="_blank">Resume</a>
-                    </div>
+                </div>    
+                </div>
                 </div>
             </div>
         </section>
