added scroll behavior

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     
     <link rel="shortcut icon" href="images/plant.ico" />
     <!--Link css, javascript files, possibly bootstrap-->
-    <script src="app.js">
-    </script>
+
     
 </head>
 
@@ -444,7 +443,7 @@
 
 <!--Contact-->
 
-    <section id="contact-section">
+    <section class="spacing-below-contact" id="contact-section">
         <div class="row heading center">
             <h2>Let's Connect</h2>
             <div class="line"></div>
@@ -479,3 +478,6 @@
 
     </div>
 </body>
+
+<script src="app.js">
+</script>
