--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                 <h4 class="logo">KF</h4>
             </div>
             <ul class="nav-links">
-                <li class="nav-item"><a href="#home-section">Home</a></li>
-                <li class="nav-item"><a href="#project-section">Projects</a></li>
-                <li class="nav-item"><a href="#service-section">Services</a></li>
-                <li class="nav-item"><a href="#about-section">About</a></li>
-                <li class="nav-item"><a href="#contact-section">Contact</a></li>
+                <li class="nav-item"><a href="#home-section" >Home</a></li>
+                <li class="nav-item"><a href="#project-section" >Projects</a></li>
+                <li class="nav-item"><a href="#service-section" >Services</a></li>
+                <li class="nav-item"><a href="#about-section" >About</a></li>
+                <li class="nav-item"><a href="#contact-section" >Contact</a></li>
             </ul>
             <div class="menu">
                 <div class="line1"></div>
@@ -358,7 +358,7 @@
 
 
     <!--Services-->
-    <section id="service-section">
+    <section class="spacing-below" id="service-section">
         <div class="row heading center">
             <h2>Services</h2>
             <div class="line"></div>
