Updated recipe-keeps demo link

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </p>
                     <div class="link-div">
                         <a class="links-btn" href="https://github.com/kimberlyflrs/recipe-keeps" target="_blank">Github link</a> 
-                        <a class="links-btn" href="https://obscure-taiga-26298.herokuapp.com/" target="_blank">Demo</a>
+                        <a class="links-btn" href="https://recipe-keeps.herokuapp.com/" target="_blank">Demo</a>
                     </div>
                 </div>
             </div>
