added nasa api project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,32 @@
             </span>
         </div>
 
+
+        <!--Nasa Media Gallery-->
+        <div class="code-project filterProject personal show">
+            <h4 class="sm-project-title">NASA Media Gallery</h4>
+            <div class="center"><div class="sm-project-line"></div></div>
+            <div class="row2">
+                <div class="column">
+                    <img class="left-side"src="images/NASA_Project.png">
+                </div>
+                <div class="column right-side">
+                    <h4 class="project-title">NASA Media Gallery</h4>
+                    <div class="project-line"></div>
+                    <p> Search through different media files(video, image, audio) from NASA and filter/sort the results. The project was created using 
+                        React Hooks, Context API, and NASA Image and Video Gallery API. 
+                    </p>
+                    <p><span class="bold">Tools/Frameworks:</span> React, Context API, NASA API, Bootstrap, React router 
+                    </p>
+                    <div class="link-div">
+                        <a class="links-btn" href="https://github.com/kimberlyflrs/nasa-media-gallery" target="_blank">Github link</a> 
+                        <a class="links-btn" href="https://nasa-media-gallery.herokuapp.com/" target="_blank">Demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Recipe Keeps-->
         <div class="code-project filterProject personal show">
             <h4 class="sm-project-title">Recipe Keeps</h4>
             <div class="center"><div class="sm-project-line"></div></div>
