Added LA Mountains project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,28 @@
             </span>
         </div>
 
+        <!--LA Mountains Homepage-->
+        <div class="code-project filterProject personal show">
+            <h4 class="sm-project-title">LA Mountains Homepage</h4>
+            <div class="center"><div class="sm-project-line"></div></div>
+            <div class="row2">
+                <div class="column">
+                    <img class="left-side"src="images/LAMountains_SkillTest.png">
+                </div>
+                <div class="column right-side">
+                    <h4 class="project-title">LA Mountains Homepage</h4>
+                    <div class="project-line"></div>
+                    <p> A responsive homepage recreated from a psd file for a technical skills test. 
+                    </p>
+                    <p><span class="bold">Tools/Frameworks:</span> HTML5, CSS3, JavaScript, Bootstrap, Flickey 
+                    </p>
+                    <div class="link-div">
+                        <a class="links-btn" href="https://github.com/kimberlyflrs/LA-Mountains-Webpage" target="_blank">Github link</a> 
+                        <a class="links-btn" href="https://kimberlyflrs.github.io/LA-Mountains-Webpage/" target="_blank">Demo</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!--Nasa Media Gallery-->
         <div class="code-project filterProject personal show">
