Added a new project

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!doctype html>
 
 <head>
-    <!--add info here-->
     <title>Kimberly Flores | Developer & Designer</title>
     <meta charset="UTF-8">
-    <meta name="description" content="Coding Portfolio">
-    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="description" content="A portfolio showcasing coding and UI/UX projects.">
+    <meta name="keywords" content="Kimberly Flores, Web Developer, UI/UX Designer, Developer, Designer, HTML, CSS, JavaScript, Los Angeles">
     <meta name="author" content="Kimberly Flores">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Poppins&display=swap" rel="stylesheet">
     
     <link rel="shortcut icon" href="images/plant.ico" />
-    <!--Link css, javascript files, possibly bootstrap-->
 
     
 </head>
@@ -64,6 +62,29 @@
                 <button class="filter-btn class" onclick="filterProjects('class')">Class</button>
                 <button class="filter-btn ux" onclick="filterProjects('ux')">UX</button>
             </span>
+        </div>
+
+        <!--Tutoring In Teams Website-->
+        <div class="code-project filterProject personal show">
+            <h4 class="sm-project-title">Tutoring in Teams Website</h4>
+            <div class="center"><div class="sm-project-line"></div></div>
+            <div class="row2">
+                <div class="column">
+                    <img class="left-side"src="images/tutoringinteams.png">
+                </div>
+                <div class="column right-side">
+                    <h4 class="project-title">Tutoring in Teams Website</h4>
+                    <div class="project-line"></div>
+                    <p> A education website that aims to incorporate social emotional learning into online learning. The website tests the interest for this project. 
+                    </p>
+                    <p><span class="bold">Tools/Frameworks:</span> HTML5, CSS3, JavaScript, Bootstrap 
+                    </p>
+                    <div class="link-div">
+                        <a class="links-btn" href="https://github.com/kimberlyflrs/TutoringInTeams-Website" target="_blank">Github link</a> 
+                        <a class="links-btn" href="https://tutoringinteams.com" target="_blank">Demo</a>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <!--LA Mountains Homepage-->
