--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="column right-side">
                     <h4 class="project-title">Tutoring in Teams Website</h4>
                     <div class="project-line"></div>
-                    <p> A education website that aims to incorporate social emotional learning into online learning. The website tests the interest for this project. 
+                    <p> A education website for the start-up company, Tutoring In Teams, that aims to incorporate social emotional learning into online learning. The website tests the interest for this project. 
                     </p>
                     <p><span class="bold">Tools/Frameworks:</span> HTML5, CSS3, JavaScript, Bootstrap 
                     </p>
