--- a/index.html
+++ b/index.html
@@ -4,27 +4,52 @@
     <title>Kimberly Flores | UX Designer</title>
     <meta charset="UTF-8">
     <meta name="description" content="A portfolio showcasing UI/UX projects.">
-    <meta name="keywords" content="Kimberly Flores, UI/UX Designer, Developer, Designer, HTML, CSS, JavaScript, Los Angeles">
+    <meta name="keywords" content="Kimberly Flores, UI/UX Designer, Designer, User Experience, Human Centered Desgin, HCI, HTML, CSS, JavaScript, Los Angeles">
     <meta name="author" content="Kimberly Flores">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href='./main.css'>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Poppins&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Work+Sans&display=swap" rel="stylesheet">
+      
     <link rel="shortcut icon" href="images/plant.ico" />
 </head>
 
+
 <body>
     <div class="container-fluid">
-<!--Nav-->
+<!--Navbar-->
+<nav class="navbar">
+    <div id="logo"><img src="images/plant.ico"></div>
+    <a href='#' class="toggle-btn">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </a>
+    <div class="nav-links">
+        <ul>
+            <li><a href="">Projects</a></li>
+            <li><a href="">Side Projects</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Resume</a></li>
+        </ul>
+    </div>
+</nav>
+
+<!--Hero-->
  <section id="hero">
-     <div id="logo"><img src="images/plant.ico"></div>
      <div class="content">
-        <h1>Hello, I'm Kimberly! I am a UX Designer who emphasizes the needs of our users. This portfolio is currently under construction.</h1>
-        <p>In the meantime, you can email me at <a href="mailto: kimbermf@uci.edu">kimbermf@uci.edu</a> for inquiries.</p>
+        <h1>Hey, I'm Kimberly!</h1>
+        <p>A user experience designer.</p>
+        <button>Explore work</button>
      </div>
  </section>
+
+ <section>
+
+</section>
 
 
     <!--Footer-->
@@ -34,5 +59,8 @@
     </footer>
     </div>
 </body>
+
+<script src="app.js"></script>
+
 
 
