Added skeleton for about and projects page

--- a/projects.html
+++ b/projects.html
@@ -38,22 +38,49 @@
     </div>
 </nav>
 
-<!--Hero-->
- <section id="hero">
+<!--Projects header-->
+ <section id="projects">
      <div class="content">
-        <h1>Hey, I'm Kimberly!</h1>
-        <p>A user experience designer.</p>
-        <button>Explore work</button>
+        <h1>Projects</h1>
      </div>
  </section>
 
- <section>
-     <div class="about">
-        I’m an Oakland-based creative leader / designer / videographer / photographer / musician / all around creative nerd, who is permanently stoked on solving design challenges, helping other designers grow, and creating effective, clean and memorable work.
-     </div>
-
+ <section id="filters">
+     <div class="filters">
+        <p>Filters: </p>
+        <p>2022</p>
+        <p>2021</p>
+        <p>2020</p>
+        <p>2019</p>
+    </div>
 </section>
 
+
+<!--Case study-->
+<section class="casestudy">
+    <div class="detail">
+        <h2>A New Order Form</h2>
+        <p>Website</p>
+        <p>2021-2022</p>
+        <button>View Project</button>
+    </div>
+    <div class="caseimg">
+       <h1>Insert image</h1>
+   </div>
+</section>
+
+<!--Case study-->
+<section class="casestudy">
+    <div class="detail">
+        <h2>An Interactive Physical Therapy Experience</h2>
+        <p>Website</p>
+        <p>2021-2022</p>
+        <button>View Project</button>
+    </div>
+    <div class="caseimg">
+       <h1>Insert image</h1>
+   </div>
+</section>
 
     <!--Footer-->
     <footer class="row" id="footer">
